# catpounce

./: .gitignore  build_wheel.py  debug.py  pyproject.toml
pounce/agent/: __init__.py  agent.py  trajectory.py
pounce/agent/node/: action.py  action_check.py  distribute.py  planning.py
pounce/agent/prompt/: __init__.py  assertion_system_prompt.md  system_prompt.md
pounce/agent/schema/: action_type.py  agent_schema.py
pounce/agents/: baes_agent.py  pounce_agent.py  state.py  trajectory.py
pounce/agents/browser_agent/: action_type.py  agent.py
pounce/agents/browser_agent/node/: action.py  screenshot.py
pounce/agents/core/: state.py
pounce/agents/core/node/: visual_planning.py
pounce/agents/core/prompt/: visual_planning_prompt.md
pounce/agents/distribute_agent/: state.py
pounce/browser/: action.py  browser.py  drawing.py  profile.py
pounce/model/: __init__.py  base.py  enums.py  gemini.py  qwen.py
pounce/utils/: coordinate_util.py  image_util.py  log_util.py
