[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pounce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "langchain>=1.0.2",
    "langchain-google-genai>=4.1.1",
    "langchain-openai>=1.1.1",
    "langgraph==1.0.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "dotenv>=0.9.9",
    "pip>=25.3",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[tool.setuptools]
packages = ["pounce", "pounce.agent", "pounce.agent.node", "pounce.agent.prompt", "pounce.browser", "pounce.model", "pounce.utils"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.setuptools.package-dir]
"" = "."
